[package]
name = "commaslash"
version = "0.1.0"
edition = "2021"
description = "Like dotslash, but without dotslash binary"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.27", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display", "from"] }
ordinal-map = "0.1.6"
hex = "0.4.3"
sha2 = "0.10.8"
shlex = "1.3.0"

[dev-dependencies]
tempfile = "3.15.0"
which = "7.0.1"
